# distributed-simulation-engine

./: .gitignore  CLAUDE.md  README.md  index.html  render.yaml
.github/: copilot-instructions.md
.github/agents/: parallel-risk-auditor.agent.md
assets/: index-C214_50r.js  index-DAIr676I.js  index-DpmH9Jdl.css
backend/: README.md  pyproject.toml
backend/app/: main.py  security.py
backend/app/api/: replay.py  stream.py  traces.py
backend/app/simulation/: engine.py  models.py  policies.py  trace_store.py
backend/data/traces/: 1.json  audit-trace-temp.json  demo-trace.json
backend/tests/: test_replay_determinism.py  test_trace_store_security.py
backend/trace_exception_check/: invalidjson1.json
docs/: ARCHITECTURE.md  DEPLOYMENT_PROFILES.md  DETERMINISM.md  KNOWN_LIMITATIONS.md  ONBOARDING.md  ROUTING_POLICIES.md  SIMULATION_MODEL.md
frontend/: .env.production  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/components/: MetricsPanel.tsx  NodePool.tsx  PolicyComparison.tsx  ReplayControls.tsx  RequestTimeline.tsx  SimulationGuide.tsx  TraceCreator.tsx
frontend/src/hooks/: useReplaySimulation.ts
